assets/css/style.css
/**
 *
 * Index
 *
 * 0.0 - Variables
 * 1.0 - General
 *  1.1 - Typography
 *  1.2 - Backgrounds
 *  1.4 - Forms
 * 2.0 - Layout
 * 3.0 - Header
 * 4.0 - Footer
 * 5.0 - Pages
 *  5.1 - Home
 *  5.2 - Webinar
 *  5.3 - About
 *  5.4 - Contact
 *  5.5 - Error
 * 6.0 - Components
 *  6.1 - Buttons
 *  6.2 - Custom Icons
 *  6.3 - Image Masks
 *  6.4 - Dividers
 
 * 10.0 - Media min 576px
 *  12.0 - Layout
 *  15.0 - Pages
 *    15.1 - Home
 
 * 20.0 - Media min 768px
 *  21.0 - General
 *    21.1 - Typography
 *  22.0 - Layout
 *  23.0 - Header
 *  24.0 - Footer
 *  25.0 - Pages
 *    25.1 - Home
 *  26.0 - Components
 *    26.1 - Buttons
 *
 */

/* ================================================== */
/* #0.0 - Variables  ================================ */
/* ================================================== */

:root {
  --color-primary-50: #fff1f1;
  --color-primary-100: #fee5e6;
  --color-primary-200: #fccfd2;
  --color-primary-300: #faa7ae;
  --color-primary-400: #f67280;
  --color-primary-500: #ee455b;
  --color-primary-600: #da2445;
  --color-primary-700: #b81839;
  --color-primary-800: #9a1736;
  --color-primary-900: #841735;
  --color-primary-950: #4a0717;

  --color-secondary-50: #f4f7fb;
  --color-secondary-100: #e9eff5;
  --color-secondary-200: #cdddea;
  --color-secondary-300: #a2c0d7;
  --color-secondary-400: #70a0c0;
  --color-secondary-500: #4e84a9;
  --color-secondary-600: #3b698e;
  --color-secondary-700: #355c7d;
  --color-secondary-800: #2c4960;
  --color-secondary-900: #283e52;
  --color-secondary-950: #1b2836;

  --color-neutral-50: #fafafa;
  --color-neutral-100: #f5f5f5;
  --color-neutral-200: #e5e5e5;
  --color-neutral-300: #d4d4d4;
  --color-neutral-400: #a3a3a3;
  --color-neutral-500: #737373;
  --color-neutral-600: #525252;
  --color-neutral-700: #404040;
  --color-neutral-800: #262626;
  --color-neutral-900: #171717;
  --color-neutral-950: #0a0a0a;

  --color-text: var(--color-neutral-600);
  --color-text-light: white;
  --color-headings: var(--color-secondary-700);
  --color-headings-light: var(--color-neutral-50);
  --color-link: var(--color-primary-600);
  --color-link-hover: var(--color-primary-400);
  --color-link-light: var(--color-primary-300);
  --color-link-light-hover: var(--color-primary-400);
}

:root {
  --text-size-sm: 14px;
  --text-size-md: 16px;
  --text-size-lg: 20px;

  /* Minor Third */
  --text-size-h1: 39px;
  --text-size-h2: 33px;
  --text-size-h3: 27px;
  --text-size-h4: 23px;
  --text-size-h5: 19px;
  --text-size-h6: 16px;

  /* Major Second */
  --text-size-h1-sm: 28px;
  --text-size-h2-sm: 25px;
  --text-size-h3-sm: 22px;
  --text-size-h4-sm: 20px;
  --text-size-h5-sm: 18px;
  --text-size-h6-sm: 16px;

  --spacing-xs: 4px;
  --spacing-sm: 8px;
  --spacing-md: 16px;
  --spacing-lg: 32px;
  --grid-gap: 32px;
}

/* ================================================== */
/* #1.0 - General =================================== */
/* ================================================== */

html {
  background-color: var(--color-neutral-50);
  color: var(--color-text-700);
  box-sizing: border-box;
  height: 100%;
  line-height: 1.15;
  -webkit-text-size-adjust: 100%;
}

*,
*::before,
*::after {
  box-sizing: inherit;
}

body {
  display: flex;
  flex-direction: column;
  margin: 0;
  padding: 0;
  height: 100%;
  font: 300 16px/1.6 Poppins, Arial, Helvetica, sans-serif;
}

img {
  width: 100%;
  height: auto;
}

/* ================================================== */
/* #1.1 Typography ================================== */
/* ================================================== */

h1,
.h1 {
  font-size: var(--text-size-h1-sm);
  font-weight: 800;
  line-height: 1.2;
  color: var(--color-headings);
}
h2,
.h2 {
  font-size: var(--text-size-h2-sm);
  font-weight: 800;
  line-height: 1.2;
  color: var(--color-headings);
}
h3,
.h3 {
  font-size: var(--text-size-h3-sm);
  font-weight: 800;
  line-height: 1.2;
  color: var(--color-headings);
}
h4,
.h4 {
  font-size: var(--text-size-h4-sm);
  font-weight: 800;
  line-height: 1.2;
  color: var(--color-headings);
}
h5,
.h5 {
  font-size: var(--text-size-h5-sm);
  font-weight: 800;
  line-height: 1.2;
  color: var(--color-headings);
}
h6,
.h6 {
  font-size: var(--text-size-h6-sm);
  font-weight: 800;
  line-height: 1.2;
  color: var(--color-headings);
}

h1,
.h1,
h2,
.h2,
h3,
.h3,
h4,
.h4,
h5,
.h5,
h6,
.h6,
p,
ul {
  margin: 16px 0;
}

h1:first-child,
.h1:first-child,
h2:first-child,
.h2:first-child,
h3:first-child,
.h3:first-child,
h4:first-child,
.h4:first-child,
h5:first-child,
.h5:first-child,
h6:first-child,
.h6:first-child,
p:first-child {
  margin-top: 0;
}

a,
a.light {
  font-weight: 500;
  position: relative;
  text-decoration: none;
  z-index: 0;
  transition: color 0.3s ease-in-out;
}
a {
  color: var(--color-link);
}
a:hover {
  color: var(--color-link-hover);
}
a.light {
  color: var(--color-link-light);
}
a.light:hover {
  color: var(--color-link-light-hover);
}

a::after,
a.light::after {
  position: absolute;
  left: 0;
  bottom: 2px;
  width: 0;
  height: 6px;
  z-index: -1;
}
a::after {
  background-color: var(--color-primary-200);
}
a.light::after {
  opacity: 0.4;
}
a:hover::after,
a.light:hover::after {
  width: 100%;
  transition: width 0.3s ease-in-out, background-color 0.3s ease-in-out;
}

a:not(.logo, .button, .social-link, .menu li a)::after {
  content: "";
}
svg .st0 {
  fill: #ee455b;
}
svg .st1 {
  fill: #355c7d;
}
strong {
  color: var(--color-secondary-700);
}

.text-large {
  font-size: var(--text-size-lg);
}
.text-center {
  text-align: center;
}

/* ================================================== */
/* #1.2 Backgrounds ================================= */
/* ================================================== */

.background-lighter {
  background-color: var(--color-neutral-100);
}
.background-light {
  background-color: var(--color-neutral-200);
}
.background-color {
  background-color: var(--color-secondary-800);
}
/* ... */

